Add SI package units

--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -1,5 +1,5 @@
 The use of catalysts has several advantages such as faster, selective, and more energy-efficient chemical reactions, directed towards producing higher amounts of the desired product while reducing unwanted byproducts.
-Over the years, scientists have developed specialized catalysts for various real-world applications, today 90\% of chemical processes involve catalysts in at least one of their steps \parencite{WEINER1998915, DeVries2012}.
+Over the years, scientists have developed specialized catalysts for various real-world applications, today \qty{90}{\percent} of chemical processes involve catalysts in at least one of their steps \parencite{WEINER1998915, DeVries2012}.
 Notable advancements in catalysis have led to the production of biodegradable plastics, novel pharmaceuticals, and eco-friendly fuels and fertilizers \parencite{FECHETE20122}.
 
 \begin{figure}[!htb]
@@ -18,15 +18,15 @@ For example, recent studies suggest that alternative, more economical catalysts,
 
 Catalysis also has a role to play to combat pollution and create cleaner energy with for example the development of efficient water-splitting technologies \parencite{AHMAD2015599}, and enhancing the use of biomass and other energy vectors such as ammonia \parencite{Fang2022}.
 Finally, challenges also arise in automotive exhaust where catalysts participate in the reduction of the emissions of toxis gases and particles \parencite{WHOAirPollution, GANDHI2003433}.
-Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and particulate matter (PM) are emitted by road traffic (65\% of \ce{NO_x}, $\approx 35\%$ of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
+Some of the major air pollutants such as nitrogen oxides, (\ce{NO_x}), and particulate matter (PM) are emitted by road traffic (\qty{65}{\percent} of \ce{NO_x}, \qty{\approx 35}{\percent} of PM), mainly by diesel vehicles, and directly inhaled by nearby major city inhabitants.
 To set a striking example, in Paris in 2018, 700 000 inhabitants were exposed to \nitrogendioxide concentrations exceeding the regulations (fig. \ref{fig:NO2Paris}), 60 000 inhabitants for PM$_{10}$, and all Parisians were concerned by exceeding the World Health Organization (WHO) recommendations for PM$_{2.5}$ \parencite{AirParis}.
-Air quality is the main environmental concern of Ile-de-France residents (65\% of total mentions) ahead of climate change (63\%) and food (38\% - \cite{AirParis}).
+Air quality is the main environmental concern of Ile-de-France residents (\qty{65}{\percent} of total mentions) ahead of climate change (\qty{63}{\percent}) and food (\qty{38}{\percent} - \cite{AirParis}).
 
 \section{The oxidation of Ammonia}
 
 \subsection{The Haber-Bosch and Ostwald processes}
 
-\epigraph{Today, about 50\% of the world population relies on nitrogen-based fertilizers to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
+\epigraph{Today, about \qty{50}{\percent} of the world population relies on nitrogen-based fertilizers to produce the food necessary to their alimentation.}%{\textit{Nature Catalysis editorial, \cite*{NatureEditorial2018}.}}
 
 The story of ammonia begins in the early $20^{th}$ century with the discovery in 1902 of the Ostwald process that permitted the synthesis of fertilizers from ammonia.
 Wilhelm Ostwald later received the Nobel price in 1909 \textit{"in recognition of his work on catalysis and for his investigations into the fundamental principles governing chemical equilibria and rates of reaction"}.
@@ -47,7 +47,7 @@ Fritz Haber received the Nobel prize in 1918 \textit{"for the synthesis of ammon
     \end{tikzpicture}
     \caption{
     Since the discovery of the Ostwald and Haber-Bosch process that allowed the mass production of nitrogen-based fertilizers, the world population increase has been relying on their production and use for agriculture.
-    Today, about 50\% of the worlds population relies on nitrogen-based fertilizer to produce the food necessary to their alimentation.
+    Today, about \qty{50}{\percent} of the worlds population relies on nitrogen-based fertilizer to produce the food necessary to their alimentation.
     Taken from \cite{WorldDataFertilizer}.
     }
     \label{fig:FertilizerWID}
@@ -66,7 +66,7 @@ The oxidation of ammonia can be described by three equations that, depending on 
 
 The first equation (eq. \ref{eq:AmmoniaOxidationNitrogen}) yields nitrogen (\nitrogen), a naturally occuring gas that does not pollute the environment nor shows any toxic behavious towards humans (tab. \ref{tab:NitrogenGases}).
 The second equation (eq. \ref{eq:AmmoniaOxidationNitrousOxide}) yields nitrous oxide (\nitrousoxide), a powerful greenhouse effect gas (tab. \ref{tab:NitrogenGases}).
-For an equal amount of \nitrousoxide and \carbondioxide, the amount of \nitrousoxide will trap 298 times more heat than the amount of \carbondioxide over the next 100 years \parencite{MITCLIMATE}, responsible for 6.2\% of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
+For an equal amount of \nitrousoxide and \carbondioxide, the amount of \nitrousoxide will trap 298 times more heat than the amount of \carbondioxide over the next 100 years \parencite{MITCLIMATE}, responsible for \qty{6.2}{\percent} of the total U.S.A. greenhouse gases emissions in 2021 (fig. \ref{fig:PieGreenhouseNO2}).
 The third equation (eq. \ref{eq:AmmoniaOxidationNitricOxide}) yields nitric oxide, also called nitrogen monoxide (\nitricoxide), which is the main desired product for the subsequent production of nitrogen-based fertilizers (tab. \ref{tab:NitrogenGases}) \textit{via} the synthetization of nitric acid with the Ostwald process.
 
 Known side reactions to the oxidation of ammonia are first the recombination of nitric oxide with unreacted ammonia that leads to the production of water and nitrogen (eq. \ref{eq:SideReactions1}), and secondly the thermal decomposition of nitric oxide (eq. \ref{eq:SideReactions2}), that both lower the total yield of the reaction when aiming at the production of nitric oxide.
@@ -102,7 +102,7 @@ Nitrogen dioxide (\nitrogendioxide) is produced from \nitricoxide which then rea
 Hence, important selectivity towards the production of \nitricoxide must be achieved in the first stage when aiming at the production of fertilizers.
 However, at low temperature or in the absence of catalyst, the production of \nitrogen is favoured (eq. \ref{eq:AmmoniaOxidationNitrogen} - \cite{Hatscher2008}).
 
-Since the 1930s, the presence of a platinum-rhodium ($\approx 10 \% Rh$) knitted gauzes catalyst and favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a 98 \nitricoxide \% yield to be achieved \parencite{Handforth1934, Heck1982}.
+Since the 1930s, the presence of a platinum-rhodium (\qty{\approx 10}{\percent} Rh) knitted gauzes catalyst and favourable reaction conditions (e.g. \qty{900}{\degreeCelsius} - \qty{5}{\bar} - excess \dioxygen) allowed a \qty{98}{\percent} \nitricoxide yield to be achieved \parencite{Handforth1934, Heck1982}.
 The reaction pathways has been proven to follow a step-by-step decomposition of ammonia on the catalyst surface by stripping the hydrogen atoms of adsorbed ammonia by dissociated surface oxygen atoms, which confirms the existence of a heterogenous catalytic process \parencite{Bradley1995,PEREZRAMIREZ2004}.
 The final pathway towards the production of \nitrogen, \nitrousoxide or \nitricoxide depends on the oxygen density and binding on the surface.
 HAVE TO DETAIL MORE HERE
@@ -135,8 +135,8 @@ Nevertheless, it can also be interesting to be able to remove \ammonia from the 
 Ammonia also pollutes and contributes to the eutrophication and acidification of terrestrial and aquatic ecosystems, and forms secondary particulate matter (PM2.5) when combined with other pollutants in the atmosphere (tab. \ref{tab:NitrogenGases}).
 In that case, the reaction must be tuned towards the production of \nitrogen which is the only non polluant and toxic gas.
 
-Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \nitricoxide and \nitrogendioxide) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for 65\% of their emissions.
-The selective catalytic reaction (SCR) using urea or ammonia as reductant (tab. \ref{tab:NitrogenGases}) has proven to be effective and to reach 95\% efficiency \parencite{MitsubishiSCR}.
+Finally, the important effect of nitrogen oxides (\ce{NO_x}, \textit{i.e.} \nitricoxide and \nitrogendioxide) on the environment has brought forward the necessity to control their emissions, especially from the exhaust of diesel engines that are responsible for \qty{65}{\percent} of their emissions.
+The selective catalytic reaction (SCR) using urea or ammonia as reductant (tab. \ref{tab:NitrogenGases}) has proven to be effective and to reach \qty{95}{\percent} efficiency \parencite{MitsubishiSCR}.
 However, there can be a subsequent problem of unreacted ammonia \textit{sliping} from the reaction, which is also an important subject of study \parencite{Thermofischer}.
 
 Today, the ammonia oxidation is an essential catalytic reaction used in the production of nitrogen-based fertilizers and in environmental applications.
