--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -90,7 +90,7 @@ The activity of single facets can also be studied with \textit{single crystals},
         Catalytically active samples studied with x-ray \textit{operando} techniques, faceted nanoparticle (left) for which the orientation of each facet is written.
         The area in white corresponds to edges and corners.
         Round single crystal set on sample holder (right), the top of the crystal is the (111) facet that is also present on the nanoparticle.
-        The area of the \{111\} facets on the nanoparticle is \qty{\approx 0.25}{\um^2} and occupies $20 \%$ of its surface, whereas the surface area of the single crystal is \qty{\approx 5e7}{\um^2}.
+        The area of the \{111\} facets on the nanoparticle is \qty{\approx 0.25}{\um^2} and occupies \qty{20}{\percent} of its surface, whereas the surface area of the single crystal is \qty{\approx 5e7}{\um^2}.
     }
     \label{fig:Samples}
 \end{figure}
