--- a/Sections/2_Theory_Models/ComputerPrograms.tex
+++ b/Sections/2_Theory_Models/ComputerPrograms.tex
@@ -29,7 +29,7 @@ For example, in the case of Bragg coherent diffraction imaging, if measurements 
 
 On the other hand, discussions about defining a set of rules that regulate research practice \parencite{Kretser2019} and reduce the grey zone that includes scientific misconduct at all levels of academia \parencite{Kornfeld2016} are growing, raising awareness on data reproducibility in the scientific community.
 
-Staggering numbers \parencite{Baker2016} show that about 65\% of scientists in the field of physics and engineering struggle to reproduce others' results, and more than 50\% fail to reproduce their own results.
+Staggering numbers \parencite{Baker2016} show that about \qty{65}{\percent} of scientists in the field of physics and engineering struggle to reproduce others' results, and more than \qty{50}{\percent} fail to reproduce their own results.
 These numbers can sometimes be linked to very precise environments and techniques, with experimental conditions and processes difficult to reproduce between different laboratories, and also to knowledge transfer from academia to industry \parencite{DanielSarwitz2015}.
 However, according to the study  \parencite{Baker2016}, code availability, insufficient peer reviewing, and access to raw data contribute to non-reproducible research.
 Moreover, it is largely accepted that the publishing industry has its own role to play by facilitating peer-reviewing to promote reproducibility \parencite{Lee2017}.
