--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -60,7 +60,7 @@ The properties of the photon and its use in our society depends on its energy an
 If visible light is situated between \qty{500}{\eV} and \qty{900}{\eV}, micro-waves used in our everyday life are situated between \qty{e-6}{\eV} and \qty{e-4}{\eV}.
 On the other side of the electromagnetic spectrum, we have higher energy photons such as x-rays (\qtyrange{e2}{e6}{\eV}) and $\gamma$-rays (\qty{>e6}{\eV}).
 
-X-rays have a wavelength of a few \unit{\angstrom} (\SI{e-10}{\m}) making them the perfect probe to study the structures of materials at the atomic scale thanks to different interactions with matter.
+X-rays have a wavelength of a few \unit{\angstrom} (\qty{e-10}{\m}) making them the perfect probe to study the structures of materials at the atomic scale thanks to different interactions with matter.
 \textcolor{Important}{Explain why this particular wl is the best}
 
 \subsubsection{Cross-sections}
@@ -139,7 +139,7 @@ The effect of the polarization of the incident beam is illustrated in figure \re
 At synchrotron sources where the incident beam is horizontally polarized, working in the vertical plane becomes more effective since the polarization factor is always equal to one.
 
 The total cross-section for the scattering event by a single free electron can be computed by integrating the differential cross-section over all the possible scattering angles, \textit{i.e.} by averaging all possible polarization directions \parencite{Willmott}.
-This yields $\sigma_{ts} = 8 \pi r_0^2 /3 = \SI{0.665}{\barn}$, (\SI{1}{barn} is equal to \SI{e-28}{\m^2}) the total Thomson scattering cross-section is constant, independent of the incoming photon energy. This results holds for x-rays for which the scatterer \textit{i.e.} the electron can be considered as free \parencite{Willmott}.
+This yields $\sigma_{ts} = 8 \pi r_0^2 /3 = \qty{0.665}{\barn}$, (\qty{1}{barn} is equal to \qty{e-28}{\m^2}) the total Thomson scattering cross-section is constant, independent of the incoming photon energy. This results holds for x-rays for which the scatterer \textit{i.e.} the electron can be considered as free \parencite{Willmott}.
 
 \subsubsection{Scattering from a single atom}\label{sec:scattering}
 
@@ -197,7 +197,7 @@ It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figu
 \end{equation}
 
 The scattering intensity is equal to the square of the scattering amplitude.
-For example, the scattering intensity of palladium atoms at $|\vec{q}| \SI{\approx 2.75}{\angstrom^{-1}}$ is only $\approx 31\%$ of that of platinum atoms. In the case of oxygen, the intensity falls down to $\approx 6.7\%$.
+For example, the scattering intensity of palladium atoms at $|\vec{q}| \qty{\approx 2.75}{\angstrom^{-1}}$ is only \qty{\approx 31}{\percent} of that of platinum atoms. In the case of oxygen, the intensity falls down to \qty{\approx 6.7}{\percent}.
 This difference in scattering intensity between elements becomes crucial when working with small objects that have a small scattering volume such as nanoparticles.
 
 \begin{figure}[!htb]
@@ -297,7 +297,7 @@ The Thomson scattering length is left apart for simplicity.
     \caption{
     Face centered cubic (FCC) lattice of Pt (space group 225).
     Atoms are represented as solid balls and situated on the corners and at the middle of the faces.
-    The lattice parameter at room temperature is $a = \SI{3.9254}{\angstrom}$. Close packed direction is achieved along the diagonal of the lateral faces, the distance between the atoms then becomes is \SI{2.71}{\angstrom}}
+    The lattice parameter at room temperature is $a = \qty{3.9254}{\angstrom}$. Close packed direction is achieved along the diagonal of the lateral faces, the distance between the atoms then becomes is \qty{2.71}{\angstrom}}
     \label{fig:fcc}
 \end{figure}
 
@@ -504,7 +504,7 @@ Minor peaks appear when the numerator is equal to one: $N\frac{\vec{q}.\vec{a}_j
 
 To resume, the lattice factor $F_{lat}(\vec{q})$ defines the shape of Bragg peaks.
 For a large crystal (\textit{i.e.} a large number of unit cells in three directions), ideal Bragg peaks will look like Dirac functions (in reality they are widened due to different experimental factors).
-For a small crystal such as nanoparticles, the fringes of the lattice factor will be further apart and their intensity more visible in contrast to the intensity of the main peak (fig. \ref{3DDP}).
+For a small crystal such as nanoparticles, the fringes of the lattice factor will be further apart and their intensity more visible in contrast to the intensity of the main peak (fig. \ref{fig:3DDP}).
 In a more general sense, the lattice factor is the Fourier transform of the crystal's lattice, the effect of the Fourier transform is that fringes will be visible in the reciprocal space in directions perpendicular to the crystal's surface.
 The ability to effectively sample these fringes during experiments is at the root of the BCDI technique, to be able to perform the inverse Fourier transform of the Bragg peak to then retrieve the crystal shape (sec. \ref{sec:BCDI}).
 
@@ -514,7 +514,7 @@ Every x-ray source can be described by several parameters.
 The brilliance $\mathcal{B}$ is a measure of the distribution of flux in both space and angular range, it indicates how the flux is spread over the source area and solid angle.
 
 \begin{equation}
-    \mathcal{B} = \frac{\unit{\photons \per \second}}{(\unit{\mm^2} \text{source area})(\unit{\milli\radian})^2(0.1\% \; \text{bandwidth})}
+    \mathcal{B} = \frac{\unit{\photons \per \second}}{(\unit{\mm^2} \text{source area})(\unit{\milli\radian})^2(\qty{0.1}{\percent} \; \text{bandwidth})}
 \end{equation}
 
 The spectral flux, on the other hand, quantifies the number of photons passing through a defined area per unit bandwidth per second.
