--- a/Sections/3_Results/BCDI.tex
+++ b/Sections/3_Results/BCDI.tex
@@ -11,22 +11,21 @@ Apart from a presentation of the sources of your data, this chapter allows you t
 
 \subsection{Experimental setup}
 
-The BCDI experiment was performed at the SixS (Surface Interface X-ray Scattering) beamline of synchrotron SOLEIL, France (sec. \ref{sec:SixS}).
+The BCDI experiment was performed at the SixS (Surface Interface X-ray Scattering) beamline of synchrotron SOLEIL, France (sec. \ref{sec:SIXS}).
 
 The experimental setup of the SixS beamline was improved during the frame of this thesis to increase the coherent flux on the sample.
 Prior study focused on decreasing the dead-time during BCDI measurements \parencite{Li2020}.
 
-The required beam size was obtained with a Fresnel zone-plate (focal distance of 20 cm), which focused the beam down to $1\, \mu m$ (horizontally) $\times 2\, \mu m$ (vertically).
-A coherent portion of the beam was selected with high precision slits by matching their horizontal and vertical gaps with the transverse coherence lengths of the beamline: 20µm (horizontally) and 100µm (vertically).
+The required beam size was obtained with a Fresnel zone-plate (focal distance of \qty{20}{\cm}), which focused the beam down to \qty{1}{\um} (horizontally) $\times$ \qty{2}{\um} (vertically).
+A coherent portion of the beam was selected with high precision slits by matching their horizontal and vertical gaps with the transverse coherence lengths of the beamline: \qty{20}{\um} (horizontally) and \qty{100}{\um} (vertically).
 A circular beam-stop, and a circular order-sorting aperture, were used to block the transmitted beam, and higher diffraction orders, respectively.
-The BCDI experiment was performed at a beam energy of 8.5 keV (wavelength of 1.46 Å). The sample was mounted in a dedicated reactor with the substrate surface oriented in the horizontal plane on a hexapod that was mounted on a 6-circle z-axis diffractometer.
+The BCDI experiment was performed at a beam energy of \qty{8.5}{\keV} (wavelength of \qty{1.46}{\angstrom}). The sample was mounted in a dedicated reactor with the substrate surface oriented in the horizontal plane on a hexapod that was mounted on a 6-circle z-axis diffractometer.
 The study has been performed in grazing incidence geometry.
-The incident angle was fixed to 3° and the asymmetric 111 Pt reflection was measured.
-The diffracted beam was recorded with a 2D MAXIPIX photon-counting detector ( $516 \times 516$ pixels with pixel size of $55 \, \mu m \times 55 \, \mu m$) positioned on the detector arm at a distance of $1.22 \, \si{meter}$.
-The in-plane ($\Gamma$) and out-of-plane ($\delta$) angles of the detector were 35.7°
-and 10.2°, respectively.
+The incident angle was fixed to \ang{3} and the asymmetric [111] Pt reflection was measured.
+The diffracted beam was recorded with a 2D MAXIPIX photon-counting detector (\numproduct{515 x 515} square pixels \qtyproduct{55 x 55}{\um} wide) positioned on the detector arm at a distance of \qty{1.22}{meter}.
+The in-plane ($\gamma$) and out-of-plane ($\delta$) angles of the detector were \ang{35.7} and \ang{10.2}, respectively.
 Three-dimensional (3D) diffraction data were collected as rocking curves of the rotation angle around the normal of the sample (here, $\mu$-angle of the diffractometer).
-Measurements have been performed, when the sample was at 400°C in a Ar-based gas flowed at 50 ml/min and at a pressure of 500 mbar.
+Measurements have been performed, when the sample was at \qty{400}{\degreeCelsius} in a \argon-based gas flowed at \qty{50}{\ml\per\min} and at a pressure of \qty{500}{\milli\bar}.
 
 \subsection{Synthetizing platinum nanoparticle}
 
@@ -35,8 +34,8 @@ A 30 nm thick homogeneous layer of platinum is deposited at room temperature on 
 The Pt nanocrystals have their c-axis oriented along the [111] direction normal to the (0001) sapphire substrate.
 A mask is then applied on the sample and a lithographic process route ensures that the platinum layer transform to nanoparticles that are between 100 and 1000 nm large,  epitaxied on the substrate surface.
 After dewetting and heating at 1100°C for 30 minutes, the platinum nanoparticles exhibit a well-faceted shape.
-The room temperature lattice parameter of platinum ($3.924 \, \si{angstrom}$) is close to that of (100) alumina ($4.122 \, \si{angstrom}$) resulting in $\approx 5 \%$ in-plane lattice strain.
-The mask yields isolated nanoparticles in the middle of $100 \, \mu m$ large squares (fig . \ref{fig:Mask}).
+The room temperature lattice parameter of platinum (\qty{3.924}{\angstrom}) is close to that of (100) alumina (\qty{4.122}{\angstrom}) resulting in \qty{\approx 5}{\percent} in-plane lattice strain.
+The mask yields isolated nanoparticles in the middle of \qty{100}{\um} large squares (fig. \ref{fig:Mask}).
 The position of the squares is designated with arabic numbers (row), letters (column) and roman numbers (large rectangle).
 The hole diameter in the mask changes in different rectangle and has a direct impact on the nanoparticle size since more matter is deposited.
 
@@ -54,16 +53,16 @@ All of the position indicators are constituted of platinum nanoparticle as well,
 
 \subsection{Dependance of the nanoparticle catalytic activity on the temperature}
 
-The activity of the platinum nanoparticles as a function of the temperature was tested during two temperature ramps at a reactor pressure of $0.3 \si{bar}$ (fig. \ref{fig:TempRamps}) to make certain that the nanoparticles were first catalytically active and secondly suffienctly active for the reactant partial pressure to be detected by the mass spectrometer.
+The activity of the platinum nanoparticles as a function of the temperature was tested during two temperature ramps at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps}) to make certain that the nanoparticles were first catalytically active and secondly suffienctly active for the reactant partial pressure to be detected by the mass spectrometer.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp1.pdf}
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp2.pdf}
     \caption{
-    	Increasing (full lines) and decreasing (low transparency) temperature ramps under a constant gas flow (41 mL/min of Ar, 8 mL/min of \dioxygen, 1 mL/min of \ammonia) at a reactor pressure of 0.3 bar.
-    	Ramp to 525°C with 150 steps, each lasting 10 seconds (left).
-    	Ramp to 650°C with 100 steps, each lasting 10 seconds (right).
+    	Increasing (full lines) and decreasing (low transparency) temperature ramps under a constant gas flow (\qty{41}{\ml\per\min} of \argon, \qty{8}{\ml\per\min} of \dioxygen, \qty{1}{\ml\per\min} of \ammonia) at a reactor pressure of \qty{0.3}{\bar}.
+    	Ramp to \qty{525}{\degreeCelsius} with 150 steps, each lasting \qty{10}{\second} (left).
+    	Ramp to \qty{650}{\degreeCelsius} with 100 steps, each lasting \qty{10}{\second} (right).
     }
     \label{fig:TempRamps}
 \end{figure}
