--- a/main.tex
+++ b/main.tex
@@ -118,7 +118,7 @@
 \usepackage[version=4]{mhchem}
 \usepackage{animate} % for animations in 3D
 \usepackage{pdfpages}
-
+\pdfminorversion=6 % to avoid errors when including pdf
 \usepackage{epigraph} % for quote
 
 \usepackage{textcomp} % To avoid warnings in gensymb
