--- a/references.bib
+++ b/references.bib
@@ -7149,7 +7149,7 @@ abstract = {The Temporal Analysis of Products (TAP) reactor has been applied to 
 @article{RLMcGreevy_2001,
 doi = {10.1088/0953-8984/13/46/201},
 year = {2001},
-month = {nov},
+month = {11},
 publisher = {},
 volume = {13},
 number = {46},
